# photon

./: .gitignore  CMakeLists.txt  README  README.md
CMakeModules/: FindGLEW.cmake  FindSOIL.cmake
data/: destruction.xml  init.lua  level.lua  level.xml  power.xml  targets.xml  tnt_harvester.xml
data/config/: controller.xml  keyboard.xml
data/shaders/: fx.frag  fx.xml  laser.frag  laser.xml  light.frag  light.xml  main.frag  main.vert  main.xml  scene.frag  scene.xml  text.frag  text.vert  text.xml
data/textures/: laser.tga  photon.tga
include/: photon_assert.h  photon_block.h  photon_blocks.h  photon_core.h  photon_gui.h  photon_input.h  photon_laser.h  photon_level.h  photon_lua.h  photon_opengl.h  photon_player.h  photon_sdl.h  photon_texture.h  photon_window_managment.h
include/photon_blocks/: block_base.h  indestructible_block.h  mirror.h  plain_block.h
src/: assert.cpp  block.cpp  block_rendering.cpp  blocks.cpp  core.cpp  draw_functions.cpp  gui_base.cpp  input.cpp  input_config.cpp  laser_rendering.cpp  level.cpp  level_io.cpp  lua.cpp  main.cpp  mainloop.cpp  opengl_core.cpp  player.cpp  sdl.cpp  shader.cpp  text_rendering.cpp  texture.cpp  tracer.cpp  version.cpp.in  window_managment.cpp
src/config/: engine_config.cpp  input_config.cpp
src/core/: core.cpp  input.cpp  input_config.cpp  mainloop.cpp  version.cpp.in
src/game/: blocks.cpp  level.cpp  level_io.cpp  lua.cpp  player.cpp  tracer.cpp
src/gui/: base.cpp  button.cpp  button_list.cpp  text_rendering.cpp
src/opengl/: block_rendering.cpp  laser_rendering.cpp  opengl_core.cpp  shader.cpp  texture.cpp  window_managment.cpp
src/photon_blocks/: block_base.cpp  indestructible_block.cpp  mirror.cpp  plain_block.cpp
windres/: res.rc  res.rc.in
